# crypt

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  test_ripemd_fix.py  test_ripemd_trace.py
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml
crypt/digest/: sm3.py
crypt/digest/CRC/: __init__.py  crc12.py  crc16_ccitt.py  crc32.py  crc32c.py  crc8.py
crypt/digest/HMAC/: hmac_sha1.py
crypt/digest/MD/: md5.py
crypt/digest/SHA/: sha1.py  sha2_224.py  sha2_256.py  sha2_384.py  sha2_512.py  sha2_512_224.py  sha2_512_256.py  sha3_224.py  sha3_384.py  sha3_512.py  sha3_ke_128.py  sha3_ke_224.py  sha3_ke_256.py  sha3_ke_384.py  sha3_ke_512.py
crypt/encode/: ascii.py  base16.py  base32.py  base62.py
crypt/encrypt/: __init__.py
crypt/encrypt/symmetric_encrypt/: __init__.py
crypt/encrypt/symmetric_encrypt/BlockCipher/: blowfish.py  simon.py
crypt/encrypt/symmetric_encrypt/StreamCipher/: Chacha20.py  RC4.py  Salsa20.py  ZUC.py
docs/superpowers/plans/: 2026-03-18-block-cipher-modes-padding-shake.md
docs/superpowers/specs/: 2026-03-18-block-cipher-modes-padding-shake-design.md
src/crypt/: __init__.py
src/crypt/asymmetric/: __init__.py  diffie_hellman.py  dsa.py  ecdh.py  rsa.py  rsa_pss.py  x25519.py
src/crypt/checksum/: __init__.py  adler32.py
src/crypt/checksum/crc/: crc16_ccitt.py  crc32.py  crc32c.py  crc64.py  crc8.py
src/crypt/classical/: __init__.py  affine_cipher.py  atbash_cipher.py  simple_substitution.py
src/crypt/digest/: __init__.py  bcrypt.py  blake2.py  blake3.py  fnv.py  ripemd128.py  ripemd160.py  sm3.py  tiger.py  whirlpool.py
src/crypt/digest/CRC/: __init__.py  crc12.py  crc16.py  crc16_ccitt.py  crc32.py  crc32c.py  crc8.py
src/crypt/digest/HMAC/: __init__.py  _hmac_core.py  cmac.py  hmac_md5.py  hmac_sha1.py  hmac_sha256.py
src/crypt/digest/KDF/: __init__.py  argon2.py  pbkdf2.py  scrypt.py
src/crypt/digest/MD/: __init__.py  md2.py  md4.py  md5.py  md6.py
src/crypt/digest/SHA/: SHA_512_224.py  SHA_512_256.py  __init__.py  sha0.py  sha1.py  sha2_224.py  sha2_256.py  (+16 more)
src/crypt/encode/: __init__.py  ascii.py  base16.py  base32.py  base36.py  base58.py  base62.py  base64.py  base85.py  base91.py  base92.py  hex2bin.py  html.py  morse_code.py  quoted_printable.py  rot47.py  url.py
src/crypt/encrypt/: __init__.py
src/crypt/hash/: __init__.py  sm3.py  tiger.py
src/crypt/kdf/: __init__.py  pbkdf2.py
src/crypt/mac/: __init__.py  cmac.py  siphash.py
src/crypt/symmetric/: __init__.py
tests/: __init__.py  conftest.py
tests/asymmetric/: test_additional_asymmetric.py  test_dsa.py  test_dsa_comprehensive.py  test_ecc.py  test_ecdh.py  test_ed25519.py  test_elgamal.py  test_ntru.py  test_paillier.py  test_rsa.py  test_rsa_pss.py  test_x25519.py
tests/checksum/: test_adler32.py  test_fnv.py
tests/checksum/crc/: test_crc.py  test_crc64.py  test_crc_all.py  test_crc_comprehensive.py  test_crc_variants.py
tests/classical/: test_affine_cipher.py  test_atbash_cipher.py  test_caesar.py  test_playfair_cipher.py  test_polybius_square.py  test_rail_fence.py  test_rot13.py  test_simple_substitution.py  test_vigenere_cipher.py
tests/digest/: test_adler32.py  test_bcrypt.py  test_blake2.py  test_blake3.py  test_cmac.py  test_crc.py  test_crc64.py  test_crc_comprehensive.py  test_fnv.py  test_hmac.py  test_md5.py  test_md5_unit.py  test_ripemd128.py  test_ripemd160.py  test_sha.py  test_sha2_512.py  test_shake128.py  test_shake256.py  test_siphash.py  test_sm3.py  test_tiger.py  test_whirlpool.py
tests/digest/CRC/: test_crc.py  test_crc_all.py  test_crc_comprehensive.py  test_crc_variants.py
tests/digest/HMAC/: __init__.py  test_hmac_comprehensive.py
tests/digest/KDF/: test_kdf.py
tests/digest/MD/: test_md_comprehensive.py  test_md_variants.py
tests/digest/SHA/: __init__.py  test_sha_comprehensive.py  test_sha_iv.py  test_sha_k.py  test_sha_utils.py
tests/digest/SHAKE/: __init__.py  test_shake128.py  test_shake256.py
tests/encode/: test_ascii.py  test_base.py  test_base16.py  test_base32.py  test_base36.py  test_base58.py  test_base62.py  test_base64.py  test_base85.py  test_base91.py  test_base92.py  test_encoding_comprehensive.py  test_hex2bin.py  test_html.py  test_morse_code.py  test_quoted_printable.py  test_rot47.py  test_url.py
tests/encrypt/: test_camellia.py
tests/encrypt/asymmetric_encrypt/: test_additional_asymmetric.py  test_dsa.py  test_dsa_comprehensive.py  test_ecc.py  test_ecdh.py  test_ed25519.py  test_elgamal.py  test_ntru.py  test_paillier.py  test_rsa.py  test_rsa_pss.py  test_x25519.py
tests/encrypt/symmetric_encrypt/: test_chacha20_poly1305.py  test_symmetric_comprehensive.py
tests/hash/: test_sm3.py  test_tiger.py  test_whirlpool.py
tests/hash/blake/: test_blake2.py  test_blake3.py
tests/hash/md/: __init__.py  test_md5.py  test_md5_unit.py  test_md_comprehensive.py  test_md_variants.py
tests/hash/ripemd/: test_ripemd128.py  test_ripemd160.py
tests/hash/sha/: test_sha.py  test_sha2_512.py  test_sha_comprehensive.py  test_sha_iv.py  test_sha_k.py  test_sha_utils.py
tests/hash/shake/: test_shake128.py  test_shake256.py
tests/kdf/: test_bcrypt.py  test_kdf.py
tests/mac/: test_cmac.py  test_poly1305.py  test_siphash.py
tests/mac/hmac/: test_hmac.py  test_hmac_comprehensive.py
tests/property/: test_multidim_oracle_property.py
tests/symmetric/: test_chacha20_poly1305.py  test_symmetric_comprehensive.py
tests/symmetric/block_cipher/: test_aes.py  test_blowfish_twofish.py  test_camellia.py  test_cast5.py  test_cast6.py  test_des.py  test_present.py  test_rc5.py  test_rc6.py  test_simon_belt.py  test_sm4_raw.py  test_tea.py  test_xtea.py  test_xxtea.py
tests/symmetric/modes/: test_cbc.py  test_cfb.py  test_ctr.py  test_eax.py  test_ecb.py  test_gcm_ccm.py  test_modes.py  test_ocb.py  test_ofb.py  test_xts.py
tests/symmetric/padding/: test_ansi_x923.py  test_pkcs7.py
tests/symmetric/stream_cipher/: test_chacha20.py  test_rabbit.py  test_rc4.py  test_salsa20.py  test_seal.py  test_stream_ciphers.py  test_trivium.py
(+207 files in other folders)
